--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bab"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_200"
+    android:background="@color/teal_200"
     tools:context=".MainActivity">
+
     <ImageView
         android:id="@+id/cpu_dice"
         android:layout_width="160dp"
@@ -64,7 +66,7 @@
             android:id="@+id/button_lower"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/teal_200"
+            android:background="@color/purple_200"
             android:text="Lower"
             android:textSize="20sp" />
 
@@ -73,7 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
-            android:background="@color/teal_200"
+            android:background="@color/purple_200"
             android:text="Higher"
             android:textSize="20sp" />
 
